<resources>
    <string name="app_name">آيات القرآن</string>
    <string name="juz">الجزء</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ayah">آية</string>
    <string name="text">نص</string>
    <string name="tafseer">تفسير</string>
    <string name="translaion">ترجمة</string>
    <string name="next">التالي</string>
    <string name="prev">السابق</string>
    <string name="translation">ترجمة</string>
    <string name="reader">القارئ</string>
    <string name="reader_name" translatable="false">القارئ %s</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="fetching_from_network">Fetching From Network</string>
    <string name="save_to_database">Save to database</string>
    <string name="downloaded_successfully">Downloaded successfully</string>
    <string name="something_went_wrong">Something went wrong</string>
</resources>
